tests/baselines/reference/parserErrorRecovery_ArgumentList2.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ArgumentList2.ts (2 errors) ====
    function foo() {
       bar(;
           ~
!!! parserErrorRecovery_ArgumentList2.ts(2,8): error TS1005: ')' expected.
       ~~~
!!! parserErrorRecovery_ArgumentList2.ts(2,4): error TS2095: Cannot find name 'bar'.
    }